--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Arvo:400,700" rel="stylesheet">
-    <title>Typical Ass Weather App</title>
+    <title>Vue Weather App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
